--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,21 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
+
 dependencies = [
+    "altair>=5.5.0",
     "fastapi>=0.116.2",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
-    "numpy>=2.3.3",
+    "mofresh>=0.2.2",
+    "numpy>=1.26,<2.0.0",
+    "polars>=1.33.1",
     "pydantic>=2.11.9",
+    "spacy>=3.7.2,<3.8.0",
+    "torch>=2.8.0",
+    "torchaudio>=2.8.0",
+    "torchvision>=0.23.0",
+    "tqdm>=4.67.1",
     "uvicorn>=0.35.0",
+    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl",
 ]
